Kubernetes/hello.docker/istio-animal/animal-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: animal-dog-service
  labels:
    app: animal-dog
spec:
  ports:
  - port: 9001
    targetPort: 80
    name: http
  selector:
    app: animal-dog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-dog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animal-dog
      version: dog
  template:
    metadata:
      labels:
        app: animal-dog
        version: dog
    spec:
      containers:
      - name: animal-dog
        image: mscatdk/animal:dog
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: animal-cat-service
  labels:
    app: animal-cat
spec:
  ports:
  - port: 9002
    targetPort: 80
    name: http
  selector:
    app: animal-cat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-cat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animal-cat
  template:
    metadata:
      labels:
        app: animal-cat
        version: cat
    spec:
      containers:
      - name: animal-cat
        image: mscatdk/animal:cat
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: animal-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: animal-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - animal-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: demo
    route:
    - destination:
        host: animal-cat-service
  - route:
    - destination:
        host: animal-cat-service
      weight: 50
    - destination:
        host: animal-dog-service
      weight: 50
